<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweaks lONElyX</string>
    <string name="title_section_system">System Tweaks</string>
    <string name="title_section_general">General Tweaks</string>
    <string name="title_section_kernel">Kernel Tweaks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_apply_on_reboot_off">Apply on reboot DISABLED!</string>
    <string name="action_apply_on_reboot_on">Apply on reboot ENABLED!</string>
    <string name="action_settings">Switch theme</string>
    <string name="pref_header_general">General</string>
    <string name="title_settings_activity">Tweaks</string>
    <string name="navigation_grawer_callback_error">Activity must implement NavigationDrawerCallbacks.</string>

    <string name="pref_title_longpress_backkey">Longpress BackKey</string>
    <string name="pref_description_longpress_backkey">Longpress back key  - kill app</string>

    <string name="pref_title_dalvik_optimization">Dalvik optimization</string>

    <string name="pref_title_recentapp_style">Recent apps style</string>

    <string name="pref_title_allow_prism_landscape">Prism landscape</string>
    <string name="pref_description_allow_prism_landscape">Allow prism landscape</string>

    <string name="pref_title_allow_360_rotation">360\% rotation</string>
    <string name="pref_description_allow_360_rotation">Allow 360\% rotation</string>

    <string name="pref_title_crtoff_animation">CRT Off animation</string>
    <string name="pref_description_crtoff_animation">Enable crtoff animation</string>

    <string name="pref_title_safe_volume">Safe volume</string>
    <string name="pref_description_safe_volume">Enable safe volume dialog</string>

    <string name="pref_title_powersave_notification">Powersave notification</string>
    <string name="pref_description_powersave_notification">Enable powersave notification</string>

    <string name="pref_title_s2s">Sweep to Sleep</string>

    <string name="pref_title_magnetic_cover">Magnetic cover</string>
    <string name="pref_description_magnetic_cover">Enable magnetic cover sensor</string>
    <string name="pref_title_fast_charge">Fast charge</string>
    <string name="pref_description_fast_charge">Fast charge from low power source such as PC usb port</string>

    <item name="slider_cpu_uv_default" format="float" type="string">0.5</item>
    <string name="cpu_uv_title">Addition CPU voltage</string>
    <string name="slider_cpu_uv_message">Addition CPU voltage with kernel init.</string>

    <string name="pref_title_cpu_oc">HW limit max CPU freq</string>

    <string name="pref_title_edp">EDP Limit CPU</string>

    <string name="pref_title_high_perf_mode">High perf mode</string>
    <string name="pref_description_high_perf_mode">Support configuration with Class AB amplifier for headphones</string>

    <item name="pref_dimmer_default" format="float" type="string">1.0</item>
    <string name="dimmer_title">Dimmer mod</string>
    <string name="pref_dimmer_message">Set custom backlight dimmer values</string>

    <string name="pref_title_color_cal">LCD Color control</string>
    <string name="reset_button">Reset</string>
    <string name="gamma_tuning_control_set_header"><![CDATA[Group <xliff:g id=\"index\">%d</xliff:g>]]></string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>

    <!-- About -->
    <string name="colorpicker_menu_about">About</string>
    <string name="title_about">About</string>
    <string name="about_ok">OK</string>
    <string name="about_body"><![CDATA[
        <b>Tweaks lONElyX</b><br>
        Version %s<br><br>
        <a href="http://forum.xda-developers.com/htc-one-m8/orig-development/kernel-lonelyx-001-t2881605">HTC One(M8) Kernel</a><br><br>
        <a href="http://forum.xda-developers.com/member.php?u=1148003">By lyapota (XDA member)</a><br><br>

    ]]></string>

    <string name="pref_title_hotplug">CPU Hotplug</string>
    <string name="pref_description_hotplug">Change CPU Hotplug algorithm</string>
    <string name="summary_current">Current</string>
    <string name="summary_disabled">Disabled</string>
    <string name="pref_title_hotplug_mpdec">MPDecision</string>
    <string name="pref_title_hotplug_cpuquiet">CPUQuiet</string>
    <string name="pref_hotplug_category">Hotplugs</string>
    <string name="pref_title_hotplug_intelli">Intelli</string>
    <string name="pref_title_hotplug_mako">Mako</string>

    <string name="headphone_title">HeadPhone</string>
    <string name="speaker_title">Speaker</string>
    <string name="microphone_title">Microphone</string>
    <string name="camera_microphone_title">Camera microphone</string>
    <string name="gun_tuning_control_set_header"><![CDATA[Group <xliff:g id=\"index\">%d</xliff:g>]]></string>
    <string name="pref_title_gun_control">Audio Gun control</string>
    <string name="pref_audio_category">Audio</string>

</resources>
