<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_allow_prism_landscape"
        android:title="@string/pref_title_allow_prism_landscape"
        android:summary="@string/pref_description_allow_prism_landscape"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_crtoff_animation"
        android:title="@string/pref_title_crtoff_animation"
        android:summary="@string/pref_description_crtoff_animation"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_allow_360_rotation"
        android:title="@string/pref_title_allow_360_rotation"
        android:summary="@string/pref_description_allow_360_rotation"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_safe_volume"
        android:title="@string/pref_title_safe_volume"
        android:summary="@string/pref_description_safe_volume"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_powersave_notification"
        android:title="@string/pref_title_powersave_notification"
        android:summary="@string/pref_description_powersave_notification"
        android:defaultValue="false" />

</PreferenceScreen>
